# putty_wo_registry

./: README.md
config/: putty.conf
patched_files/patches/windows/: pageant.c  storage.c
session_templates/: bernstein_color.txt
src/: CMakeLists.txt
src/cpack/: CPackOptions.cmake.in  create-cpackoptions.cmake  puttyCPack.cmake  puttyPostcpack.cmake  puttySymbolsCPack.cmake
src/windows/: CMakeLists.txt
